fastmetrics-derive/tests/ui/fail/encode_label_set/skip_and_flatten_conflict.rs
use fastmetrics_derive::EncodeLabelSet;

#[derive(EncodeLabelSet)]
struct Inner {
    x: u8,
}

#[derive(EncodeLabelSet)]
struct Labels {
    #[label(skip, flatten)]
    inner: Inner,
}

fn main() {}
